Developmental Aphas until further notice.

r7 Complete rewrite of the options table
r8 forgot to add LibAboutPanel, oops
r9 hopefully fixed the Blizzard Interface Addons Options Panel. moved the options into OnInit(). worked on the bars code
r10 many small changes. switched to libbars. more coding
r11 got rid of the unnecessary TestAddon in LibBars-1.0
r12 hopefully got localization working, which is subject to changes
r13 added random chat messages, updated localization, fixed some typos
r14 more codebase done. added LibDataBroker-1.1 support
r15 added a Lib, removed a folder, lots of codebase done
r16 copy/paste errors kill!
r17 frFR translations (in progress) from ckeurk and Xilbar
r18 more copy/paste errors
r19 more general fixes. added profile commands, a bit more localization