@@ -13,3 +13,5 @@ r16 copy/paste errors kill!
 r17 frFR translations (in progress) from ckeurk and Xilbar
 r18 more copy/paste errors
 r19 more general fixes. added profile commands, a bit more localization
+r20 updated frFR
+r21 altered logic for stuff that gets enabled/disabled during combat, and out of combat
